--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <h1>Simple Ticket System</h1>
-    <p class="muted">Prototype demo using localStorage</p>
+    <p class="muted">Prototype demo using cloudflare</p>
   </header>
 
   <main class="container">
@@ -17,14 +17,14 @@
       <h2>Get started</h2>
       <ul class="links">
         <li><a href="create_ticket.html">Create a Ticket</a></li>
-        <li><a href="tickets.html">View Tickets</a></li>
+        <li><a href="tickets.html">View Tickets(SOMEHOW BROKEN)</a></li>
         <li><a href="admin.html">Admin Panel</a></li>
       </ul>
     </nav>
 
     <section class="card">
       <h3>Quick info</h3>
-      <p>Create tickets with title, description, priority, and contact. Tickets are stored in your browser (localStorage) so they persist on this machine only.</p>
+      <p>Create tickets with title, description, priority, and contact.</p>
     </section>
   </main>
 
