--- a/create_ticket.html
+++ b/create_ticket.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Create Ticket</title>
+  <title>Create a Ticket</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -52,7 +52,7 @@
       <option value="Medium">Medium</option>
       <option value="High">High</option>
     </select>
-    <input type="email" id="contact" placeholder="Your Email or Discord Tag" required />
+    <input type="email" id="contact" placeholder="Discord Tag" required />
     <button type="submit">Submit Ticket</button>
   </form>
 
