--- a/admin.html
+++ b/admin.html
@@ -7,7 +7,7 @@
   <main class="container">
     <!-- Password Gate -->
     <section id="loginCard" class="card">
-      <h2>Enter Admin Password</h2>
+      <h2>Enter the Admin Password</h2>
       <p class="muted">This page is restricted to administrators.</p>
       <input id="adminPass" type="password" placeholder="Enter password" />
       <div class="form-actions">
