--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <h1>Simple Ticket System</h1>
-    <p class="muted">Prototype demo using cloudflare</p>
+    <p class="muted">A Prototype demo using CloudFlare</p>
   </header>
 
   <main class="container">
@@ -24,12 +24,12 @@
 
     <section class="card">
       <h3>Quick info</h3>
-      <p>Create tickets with title, description, priority, and contact.</p>
+      <p>Create tickets with title, description, priority, and discord username.</p>
     </section>
   </main>
 
   <footer class="site-footer">
-    <small>Built for demo • No backend • Local only</small>
+    <small>Built for demo • No backend • WIP</small>
   </footer>
 </body>
 </html>
