--- a/create_ticket.html
+++ b/create_ticket.html
@@ -52,7 +52,7 @@
       <option value="Medium">Medium</option>
       <option value="High">High</option>
     </select>
-    <input type="email" id="contact" placeholder="Discord Tag" required />
+    <input type="Discord" id="contact" placeholder="Discord Tag" required />
     <button type="submit">Submit Ticket</button>
   </form>
 
