--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <h1>Simple Ticket System</h1>
-    <p class="muted">A Prototype demo using CloudFlare</p>
+    <p class="muted">A Prototype using CloudFlare</p>
   </header>
 
   <main class="container">
@@ -24,7 +24,7 @@
 
     <section class="card">
       <h3>Quick info</h3>
-      <p>Create tickets with title, description, priority, and discord username.</p>
+      <p>Create tickets with title, description, priority, and Discord username.</p>
     </section>
   </main>
 
