--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="site-header">
     <h1>Simple Ticket System</h1>
-    <p class="muted">A Prototype using CloudFlare</p>
+    <p class="muted">A Prototype using Cloudflare</p>
   </header>
 
   <main class="container">
