--- a/admin.html
+++ b/admin.html
@@ -29,7 +29,7 @@
 
   <script src="app.js"></script>
   <script>
-    const ADMIN_PASSWORD = "secret123"; // 🔒 change this to whatever you want
+    const ADMIN_PASSWORD = "secret123!"; // 🔒 change this to whatever you want
 
     const loginCard = document.getElementById('loginCard');
     const adminSection = document.getElementById('adminSection');
